<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#4C000000"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:background="@color/white"
        card_view:cardBackgroundColor="@color/background_color"
        card_view:cardCornerRadius="8.0dip"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10.0dip">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="8.0dip"
                android:layout_marginBottom="10.0dip"
                android:fontFamily="@font/ibmplexserif_regular"
                android:text="Camera"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="8.0dip"
                android:fontFamily="@font/ibmplexserif_regular"
                android:text="File"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9.0dip"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/location"
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/segoeui"
                    android:text=" /Storage/emulated/Camera..."
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginLeft="9.0dip">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/date"
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvCreatedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/segoeui"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=" 5 March 2021, 5:57 pm"
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTotalSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginLeft="9.0dip">

                <TextView
                    android:id="@+id/tvTotalSize"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/total_size"
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/segoeui"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=" 6.7 GB"
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContains"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginLeft="9.0dip">

                <TextView
                    android:id="@+id/tvContains"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Contains : "
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvVideoCounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/segoeui"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=" 72 Videos, 2 Folders"
                    android:textColor="@color/in_active_text_color"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="8.0dip"
                    android:fontFamily="@font/ibmplexserif_regular"
                    android:text="Media"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:id="@+id/llFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9.0dip"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp">

                    <TextView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/format"
                        android:textColor="@color/in_active_text_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvFormat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:fontFamily="@font/segoeui"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=" MPEG - 4"
                        android:textColor="@color/in_active_text_color"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llResolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginLeft="9.0dip">

                    <TextView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/resolution"
                        android:textColor="@color/in_active_text_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvResolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:fontFamily="@font/segoeui"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=" 1280 * 720"
                        android:textColor="@color/in_active_text_color"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginLeft="9.0dip">

                    <TextView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/length"
                        android:textColor="@color/in_active_text_color"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tvLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:fontFamily="@font/segoeui"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=" 00:10"
                        android:textColor="@color/in_active_text_color"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dip"
                    android:layout_marginTop="8.0dip"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center"
                    android:padding="5.0dip"
                    android:text="Cancel"
                    android:textColor="#ff3d3d3f"
                    android:textSize="@dimen/_13sdp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dip"
                    android:layout_marginTop="8.0dip"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center"
                    android:padding="5.0dip"
                    android:text="OK"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
